# nodice2

./: .gitignore  LICENSE  README.md  requirements.txt
docs/: DEVELOPER.md  MANNAL.md
nodice/: .env.prod  bot.py  pyproject.toml
nodice/plugins/nodice/: __init__.py  admin.py  calculator.py  character.py  command.py  constant.py  deck.py  exchange.py  handle.py  help.py  message.py  nb.py  nb2.py  others.py  rule.py  sqlite.py  test.py  utils.py
nodice/plugins/nonebot_plugin_nodice/: README.md  __init__.py  calculator.py  character.py  constant.py  cqhttp.py  data.py  deck.py  exception.py  handle.py  help.py  init.py  matcher.py  message.py  mirai.py  nb.py  nb2.py  others.py  pyproject.toml
nodice/plugins/nonebot_plugin_nodice/adapters/: cqhttp.py  mirai.py
nodice/plugins/nonebot_plugin_nodice/core/: __init__.py  calculator.py  character.py  data.py  deck.py  exception.py  utils.py
nodice/plugins/nonebot_plugin_nodice/extension/coc/: calculator.py
src/: .env.prod  bot.py  pyproject.toml
src/plugins/nodice/: VERSION  __init__.py  admin.py  calculator.py  character.py  constant.py  deck.py  message.py  nb2.py  others.py  sqlite.py  utils.py
src/plugins/nodice/data/: CustomMsg.hjson
src/plugins/nodice/data/decks/: insane.json  name.json  tarot.json
