[tool.poetry]
name = "nodice2"
version = "2.0.0-alpha.1"
description = "Dicebot on qq"
authors = ["Jigsaw <j1g5aw@foxmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7.3"
nb-cli = "^0.4.1"
nonebot2 = "^2.0.0-alpha.11"
nonebot-adapter-cqhttp = "^2.0.0a11.post2"
nonebot-plugin-manager = "^0.3.8.post1"
nonebot-plugin-trpglogger = "^0.2.0"
nonebot-plugin-cocdicer = "^0.1.4"

[nonebot.plugins]
plugins = ["nonebot_plugin_manager", "nonebot_plugin_trpglogger","nonebot_plugin_cocdicer"]
plugin_dirs = ["plugins"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
