[tool.poetry]
name = "nodice2"
version = "2.0.0-alpha.1"
description = "Dicebot on QQ"
authors = ["Jigsaw <j1g5aw@foxmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0a15"
nonebot-adapter-cqhttp = "^2.0.0a15"
nonebot-plugin-manager = "^0.5.0"
nonebot-plugin-trpglogger = "^0.3.0"
nonebot-plugin-nodice = { path = "./plugins/nonebot_plugin_nodice", develop = true }

[tool.poetry.dev-dependencies]
nb-cli = "^0.5.0"

[nonebot.plugins]
plugins = ["nonebot_plugin_manager", "nonebot_plugin_trpglogger"]
plugin_dirs = ["plugins"]

[tool.poetry.extras]
mah = ["nonebot-adapter-mirai"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
