[tool.poetry]
name = "nonebot-plugin-nodice"
version = "2.0.0-alpha.1"
description = "Dicebot Pulgin for Nonebot"
license = "AGPL-3.0"
authors = ["Jigsaw <j1g5aw@foxmail.com>"]
readme = "README.md"
homepage = "https://github.com/thereisnodice/nodice2/tree/master/nodice/plugins/nodice"
repository = "https://github.com/thereisnodice/nodice2/tree/master/nodice/plugins/nodice"
documentation = "https://github.com/thereisnodice/nodice2/tree/master/nodice/plugins/nodice#readme"
keywords = ["nonebot", "nonebot2", "dice"]
packages = [
    { include = "nonebot_plugin_nodice", from = ".."}
]

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-alpha.11"
nonebot-adapter-cqhttp = "^2.0.0a11.post2"
hjson = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
